# WSP-Dashboard

./: .gitignore  .sops.yaml  configuration.nix  flake.nix  pyproject.toml
src/poetfolio/: settings.py
wsp-dashboard/: flake.nix  pyproject.toml
wsp-dashboard/secrets/: secrets.json
wsp_dashboard/: flake.nix  imported_pip_requirements.txt  pyproject.toml
wsp_dashboard/poetfolio/: settings.py
