[tool.poetry]
name = "wsp-dashboard"
version = "0.1.0"
description = "Course tracking software for the Whittier Scholars Program"
authors = ["Ekiree <noah@ekiree.tech>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
babel = "2.12.1"
django = "^4.2.11"
django-bootstrap4 = "23.1"
django-ckeditor = "6.7"
django-crispy-forms = "2.1"
django-js-asset = "^2.2.0"
django-localflavor = "4.0"
django-phonenumber-field = "7.2.0"
mysqlclient = "^2.2.4"
phonenumbers = "^8.13.40"
pillow = "10.1.0"
python-stdnum = "1.19"
pytz = "2023.3"
reportlab = "4.0.4"
setuptools = "^70.3.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
#requires = ["setuptools", "poetry-core", "wheel" ]
build-backend = "poetry.core.masonry.api"
